<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:src="@mipmap/welcome_face" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@mipmap/welcome_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_test" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/tv_bg_radius_10"
        android:gravity="center"
        android:text="@string/has_account_login"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/tv_bg_radius_10"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>